--- a/www/index.html
+++ b/www/index.html
@@ -27,19 +27,14 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-        <style>
-	        body {
-	            margin: 0;
-	            padding: 0;
-	            background-color: #000000;
-	        }
-		</style>
-		<script src='bin/pixi.min.js'></script>
+
     </head>
     <body>
-        <div class="app" id='app'>
-            
+        <div class="app">
+            <div id='main_wrap'>
+            	<div id='header'></div>
+	            <div id='content'></div>
+            </div>
         </div>
         <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
